--- a/app_thu_tien/web/index.html
+++ b/app_thu_tien/web/index.html
@@ -23,13 +23,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="app_thu_tien">
+  <meta name="apple-mobile-web-app-title" content="money_management">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>app_thu_tien</title>
+  <title>money_management</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
